@@ -1,4 +1,0 @@
-//void ResetTimer(unsigned char timerNum);
-void SetTimer(unsigned char timerNum, unsigned int ticks_to_wait);
-unsigned char CheckTimer(unsigned char timerNum);
-//void ExpireTimer(unsigned char timerNum);
