@@ -10,3 +10,6 @@ Sat Jul  9 14:12:29 EDT 2011
 
 0x11		--		Sat Jul  9 14:19:05 EDT 2011 to ???
 					
+0x12		--		Changes on Github made mostly in 2013 I think.
+
+0x13		--		Added audio bootloader, application changes (pre-release) in November 2014
